Build : [#3] 테스트용 inMemoryDB h2 의존성추가 및 테스트 DB sql 추가

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
+	runtimeOnly 'com.h2database:h2'
 
 }
 
