--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -79,8 +79,11 @@ spring:
   web:
     resources:
       add-mappings: false
-  autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
 ---
 spring:
   config:
