Build : mysql replica 파일 수정
- 기존에 /mymarket.sql:/docker-entrypoint-initdb.d/mymarket.sql 로 replica 테이블 자동생성시 index or table이 이미 있다고 충돌 발생
master-slave replica를 맺은 후에 table을 초기화해서 자연스럽게 복제되도록 수정

--- a/deployment/mysql/docker-compose.yml
+++ b/deployment/mysql/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - 3307:3306
     volumes:
       - ./master/conf/mysql.conf.cnf:/etc/mysql/conf.d/mysql.conf.cnf:ro
-      - ./mymarket.sql:/docker-entrypoint-initdb.d/mymarket.sql
+      - ./master/data:/var/lib/mysql
+      - ./mymarket.sql:/app/mymarket.sql
     networks:
       - overlay
     environment:
@@ -27,7 +28,7 @@ services:
       - mysql_master
     volumes:
       - ./slave/conf/mysql.conf.cnf:/etc/mysql/conf.d/mysql.conf.cnf:ro
-      - ./mymarket.sql:/docker-entrypoint-initdb.d/mymarket.sql
+      - ./slave/data:/var/lib/mysql
     networks:
       - overlay
     environment:
